--- a/.env
+++ b/.env
@@ -1,13 +1,11 @@
-SERVICE_REGISTRY=service-registry
-ZIPKIN=zipkin
-
+# Default setting, change config while deploy application
 GRAFANA_USER=admin
 GRAFANA_PASSWORD=password
 
 EUREKA_USER=eureka
 EUREKA_PASSWORD=password
 
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 
 #api secret key
@@ -24,20 +22,20 @@ MAIL_PORT=587
 MAIL_USERNAME=crmsystem.sender@gmail.com
 MAIL_PASSWORD=mkwcalqvyssuszab
 
-MONGO_HOST=mongodb
+MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_ROOT_USERNAME=mongo
 MONGO_ROOT_PASSWORD=password
 MONGO_DATABASE=product-service
 
-MYSQL_URL=mysql
+MYSQL_URL=localhost
 MYSQL_PORT=3306
 MYSQL_DATABASE=order-service
 MYSQL_USER=mysql
 MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=rootPassword
 
-POSTGRES_URL=postgres
+POSTGRES_URL=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=postgres
 POSTGRES_USER=postgres
