--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,12 +7,12 @@ server.port=2630
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${SERVICE-REGISTRY:localhost}:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
 
 # ===============================
 # ZIPKIN SERVER
 # ===============================
-spring.zipkin.base-url=http://${ZIPKIN:localhost}:9411
+spring.zipkin.base-url=http://zipkin:9411
 spring.sleuth.sampler.probability=1.0
 
 # ===============================
@@ -30,7 +30,7 @@ logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INF
 # ===============================
 # REDIS CACHE
 # ===============================
-redis.host=${REDIS_HOST:localhost}
+redis.host=${REDIS_HOST:redis}
 redis.port=${REDIS_PORT:6379}
 
 # ===============================
@@ -38,46 +38,4 @@ redis.port=${REDIS_PORT:6379}
 # ===============================
 jwt.secret=${JWT_SECRET:Api@Secret.Key}
 
-# ===============================
-# SERVICE ROUTING
-# ===============================
-# Zipkin route
-spring.cloud.gateway.routes[0].id=zipkin
-spring.cloud.gateway.routes[0].uri=http://${ZIPKIN:localhost}:9411
-spring.cloud.gateway.routes[0].predicates[0]=Path=/zipkin
-
-spring.cloud.gateway.routes[1].id=zipkin-static
-spring.cloud.gateway.routes[1].uri=http://${ZIPKIN:localhost}:9411
-spring.cloud.gateway.routes[1].predicates[0]=Path=/zipkin/**
-
-# Service registry route
-spring.cloud.gateway.routes[2].id=service-registry
-spring.cloud.gateway.routes[2].uri=http://${SERVICE-REGISTRY:localhost}:8761
-spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka
-spring.cloud.gateway.routes[2].filters[0]=SetPath=/
-
-spring.cloud.gateway.routes[3].id=service-registry-static
-spring.cloud.gateway.routes[3].uri=http://${SERVICE-REGISTRY:localhost}:8761
-spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
-
-# Authentication server route
-spring.cloud.gateway.routes[4].id=authentication-service
-spring.cloud.gateway.routes[4].uri=lb://authentication-service
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/authentication-service/**
-spring.cloud.gateway.routes[5].predicates[1]=Method=POST
-
-# Product service route
-spring.cloud.gateway.routes[5].id=product-service
-spring.cloud.gateway.routes[5].uri=lb://product-service
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/product-service/**
-
-# Order service route
-spring.cloud.gateway.routes[6].id=order-service
-spring.cloud.gateway.routes[6].uri=lb://order-service
-spring.cloud.gateway.routes[6].predicates[0]=Path=/api/order-service/**
-
-# Inventory service route
-spring.cloud.gateway.routes[7].id=inventory-service
-spring.cloud.gateway.routes[7].uri=lb://inventory-service
-spring.cloud.gateway.routes[7].predicates[0]=Path=/api/inventory-service/**
 
