--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -8,18 +8,18 @@ server.port=2631
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${SERVICE-REGISTRY:localhost}:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
 
 ## ===============================
 ## ZIPKIN SERVER
 ## ===============================
-spring.zipkin.base-url=http://${ZIPKIN:localhost}:9411
+spring.zipkin.base-url=http://zipkin:9411
 spring.sleuth.sampler.probability=1.0
 
 # ===============================
 # SPRING ACTUATOR & PROMETHEUS
 # ===============================
-management.endpoints.web.exposure.include= prometheus
+management.endpoints.web.exposure.include=prometheus
 management.endpoint.shutdown.enabled=true
 
 ## ===============================
@@ -29,10 +29,10 @@ springdoc.api-docs.path=/api-docs
 api.info.title=Authentication API Services
 api.info.description=API to authenticate user for application
 api.info.version=1.0.0
-api.info.terms-of-service=https://beetsoft.com.vn/terms/
-api.info.contact.name=BEETSOFT CO., LTD
-api.info.contact.email=contact@beetsoft.com.vn
-api.info.contact.url=https://beetsoft.com.vn/
+api.info.terms-of-service=https://company.com.vn/terms/
+api.info.contact.name=SOFTWARE CO., LTD
+api.info.contact.email=contact@company.com.vn
+api.info.contact.url=https://company.com.vn/
 api.info.license.name=Apache 2.0
 api.info.license.url=http://www.apache.org/licenses/LICENSE-2.0.html
 
@@ -56,13 +56,13 @@ jwt.reset.token.validity=${JWT_RESET_TOKEN_VALIDITY:60}
 # ===============================
 # REDIS CACHE
 # ===============================
-redis.host=${REDIS_HOST:localhost}
+redis.host=${REDIS_HOST:redis}
 redis.port=${REDIS_PORT:6379}
 
 # ===============================
 # DATABASE
 # ===============================
-spring.datasource.url=jdbc:postgresql://${POSTGRES_URL:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DATABASE:postgres}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_URL:postgres}:${POSTGRES_PORT:5432}/${POSTGRES_DATABASE:postgres}
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:password}
 
