--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -7,19 +7,19 @@ server.port=2635
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${SERVICE-REGISTRY:localhost}:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
 
 # ===============================
 # ZIPKIN SERVER
 # ===============================
 spring.sleuth.integration.enabled=true
-spring.zipkin.base-url=http://${ZIPKIN:localhost}:9411
+spring.zipkin.base-url=http://zipkin:9411
 spring.sleuth.sampler.probability=1.0
 
 # ===============================
 # SPRING ACTUATOR & PROMETHEUS
 # ===============================
-management.endpoints.web.exposure.include= prometheus
+management.endpoints.web.exposure.include=prometheus
 
 # ===============================
 # KAFKA consumer
