--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -8,12 +8,12 @@ server.port=2634
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${SERVICE-REGISTRY:localhost}:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
 
 ## ===============================
 ## ZIPKIN SERVER
 ## ===============================
-spring.zipkin.base-url=http://${ZIPKIN:localhost}:9411
+spring.zipkin.base-url=http://zipkin:9411
 spring.sleuth.sampler.probability=1.0
 
 ## ===============================
@@ -23,17 +23,17 @@ springdoc.api-docs.path=/api-docs
 api.info.title=Order API Services
 api.info.description=API to fetch order details for application
 api.info.version=1.0.0
-api.info.terms-of-service=https://beetsoft.com.vn/terms/
-api.info.contact.name=BEETSOFT CO., LTD
-api.info.contact.email=contact@beetsoft.com.vn
-api.info.contact.url=https://beetsoft.com.vn/
+api.info.terms-of-service=https://company.com.vn/terms/
+api.info.contact.name=SOFTWARE CO., LTD
+api.info.contact.email=contact@company.com.vn
+api.info.contact.url=https://company.com.vn/
 api.info.license.name=Apache 2.0
 api.info.license.url=http://www.apache.org/licenses/LICENSE-2.0.html
 
 # ===============================
 # DATABASE
 # ===============================
-spring.datasource.url=jdbc:mysql://${MYSQL_URL:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:order-service}
+spring.datasource.url=jdbc:mysql://${MYSQL_URL:mysql}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:order-service}
 spring.datasource.username=${MYSQL_USER:mysql}
 spring.datasource.password=${MYSQL_PASSWORD:password}
 
