--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <spring-cloud.version>2021.0.4</spring-cloud.version>
         <swagger.version>1.6.12</swagger.version>
         <bom.version>1.17.3</bom.version>
+        <image.path>registry.hub.docker.com/luongquoctay87</image.path>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -65,6 +66,22 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <!-- Building Java containers with Jib, we don't need to write a dockerfile -->
+            <!-- https://www.baeldung.com/jib-dockerizing -->
+            <!-- https://cloud.google.com/java/getting-started/jib -->
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.8.0</version>
+                <configuration>
+                    <from>
+                        <image>openjdk:alpine</image>
+                    </from>
+                    <to>
+                        <image>${image.path}/${project.artifactId}:${project.version}</image>
+                    </to>
                 </configuration>
             </plugin>
         </plugins>
