--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -10,8 +10,8 @@ server.port=8761
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.username=${EUREKA_USER:-eureka}
-eureka.password=${EUREKA_PASSWORD:-password}
+eureka.username=${EUREKA_USER:eureka}
+eureka.password=${EUREKA_PASSWORD:password}
 
 # ===============================
 # ZIPKIN SERVER
@@ -22,4 +22,4 @@ spring.sleuth.sampler.probability=1.0
 # ===============================
 # SPRING ACTUATOR & PROMETHEUS
 # ===============================
-management.endpoints.web.exposure.include= prometheus
+management.endpoints.web.exposure.include=prometheus
