--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>maven-clean-verify</artifactId>
         <groupId>com.service</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.service</groupId>
     <artifactId>notification-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <dependencies>
         <dependency>
