--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,12 +7,12 @@ server.port=2630
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${DISCOVERY_SERVER:localhost:8761}/eureka
 
 # ===============================
 # ZIPKIN SERVER
 # ===============================
-spring.zipkin.base-url=http://zipkin:9411
+spring.zipkin.base-url=${ZIPKIN_SERVER:http://localhost:9411}
 spring.sleuth.sampler.probability=1.0
 
 # ===============================
@@ -23,19 +23,22 @@ management.endpoints.web.exposure.include=prometheus
 # ===============================
 # LOGGING
 # ===============================
-logging.level.root=INFO
-logging.level.org.springframework.cloud.gateway=TRACE
-logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
+#logging.level.root=INFO
+#logging.level.org.springframework.cloud.gateway=TRACE
+#logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 
 # ===============================
 # REDIS CACHE
 # ===============================
-redis.host=${REDIS_HOST:redis}
+redis.host=${REDIS_HOST:localhost}
 redis.port=${REDIS_PORT:6379}
 
 # ===============================
 # JSON WEB TOKEN
 # ===============================
 jwt.secret=${JWT_SECRET:Api@Secret.Key}
+
+api.header.key=${API_HEADER_KEY:apiKey}
+api.header.version=${API_HEADER_VERSION:1.0}
 
 
