--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -2,18 +2,17 @@
 # APPLICATION SETTING
 # ===============================
 spring.application.name=authentication-service
-server.servlet.context-path=/api/authentication-service
 server.port=2631
 
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${DISCOVERY_SERVER:localhost:8761}/eureka
 
 ## ===============================
 ## ZIPKIN SERVER
 ## ===============================
-spring.zipkin.base-url=http://zipkin:9411
+spring.zipkin.base-url=${ZIPKIN_SERVER:http://localhost:9411}
 spring.sleuth.sampler.probability=1.0
 
 # ===============================
@@ -25,16 +24,16 @@ management.endpoint.shutdown.enabled=true
 ## ===============================
 ## OpenAPI Definition
 ## ===============================
-springdoc.api-docs.path=/api-docs
-api.info.title=Authentication API Services
+springdoc.api-docs.path=${API_DOCS_PATH:/api-docs}
+api.info.version=${API_INFO_VERSION:1.0}
+api.info.terms-of-service=${API_INFO_TERMS:https://software.com.vn/terms/}
+api.info.contact.name=${API_INFO_CONTACT_NAME:SOFTWARE CO., LTD}
+api.info.contact.email=${API_INFO_CONTACT_EMAIL:contact@software.com.vn}
+api.info.contact.url=${API_INFO_CONTACT_URL:https://software.com.vn/}
+api.info.license.name=${API_INFO_LICENSE_NAME:Apache 2.0}
+api.info.license.url=${API_INFO_LICENSE_URL:http://www.apache.org/licenses/LICENSE-2.0.html}
+api.info.title=Authentication API Service
 api.info.description=API to authenticate user for application
-api.info.version=1.0.0
-api.info.terms-of-service=https://company.com.vn/terms/
-api.info.contact.name=SOFTWARE CO., LTD
-api.info.contact.email=contact@company.com.vn
-api.info.contact.url=https://company.com.vn/
-api.info.license.name=Apache 2.0
-api.info.license.url=http://www.apache.org/licenses/LICENSE-2.0.html
 
 # ===============================
 # SPRING SECURITY
@@ -56,13 +55,13 @@ jwt.reset.token.validity=${JWT_RESET_TOKEN_VALIDITY:60}
 # ===============================
 # REDIS CACHE
 # ===============================
-redis.host=${REDIS_HOST:redis}
+redis.host=${REDIS_HOST:localhost}
 redis.port=${REDIS_PORT:6379}
 
 # ===============================
 # DATABASE
 # ===============================
-spring.datasource.url=jdbc:postgresql://${POSTGRES_URL:postgres}:${POSTGRES_PORT:5432}/${POSTGRES_DATABASE:postgres}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_URL:localhost:5432/postgres}
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:password}
 
