--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -7,13 +7,13 @@ server.port=2635
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${DISCOVERY_SERVER:localhost}:8761/eureka
 
 # ===============================
 # ZIPKIN SERVER
 # ===============================
 spring.sleuth.integration.enabled=true
-spring.zipkin.base-url=http://zipkin:9411
+spring.zipkin.base-url=${ZIPKIN_SERVER:http://localhost:9411}
 spring.sleuth.sampler.probability=1.0
 
 # ===============================
@@ -22,11 +22,6 @@ spring.sleuth.sampler.probability=1.0
 management.endpoints.web.exposure.include=prometheus
 
 # ===============================
-# KAFKA consumer
+# KAFKA CONSUMER
 # ===============================
-spring.kafka.bootstrap-servers=kafka:29092
-spring.kafka.consumer.group-id=notificationId
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.type.mapping=event:com.service.notification.PlacedOrderEvent
+kafka.bootstrap.servers=${KAFKA_SERVER:localhost:29092}
