--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -2,38 +2,37 @@
 # APPLICATION SETTING
 # ===============================
 spring.application.name=order-service
-server.servlet.context-path=/api/order-service
 server.port=2634
 
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${DISCOVERY_SERVER:localhost:8761}/eureka
 
 ## ===============================
 ## ZIPKIN SERVER
 ## ===============================
-spring.zipkin.base-url=http://zipkin:9411
+spring.zipkin.base-url=${ZIPKIN_SERVER:http://localhost:9411}
 spring.sleuth.sampler.probability=1.0
 
 ## ===============================
 ## OpenAPI Definition
 ## ===============================
-springdoc.api-docs.path=/api-docs
-api.info.title=Order API Services
+springdoc.api-docs.path=${API_DOCS_PATH:/api-docs}
+api.info.version=${API_INFO_VERSION:1.0}
+api.info.terms-of-service=${API_INFO_TERMS:https://software.com.vn/terms/}
+api.info.contact.name=${API_INFO_CONTACT_NAME:SOFTWARE CO., LTD}
+api.info.contact.email=${API_INFO_CONTACT_EMAIL:contact@software.com.vn}
+api.info.contact.url=${API_INFO_CONTACT_URL:https://software.com.vn/}
+api.info.license.name=${API_INFO_LICENSE_NAME:Apache 2.0}
+api.info.license.url=${API_INFO_LICENSE_URL:http://www.apache.org/licenses/LICENSE-2.0.html}
+api.info.title=Order API Service
 api.info.description=API to fetch order details for application
-api.info.version=1.0.0
-api.info.terms-of-service=https://company.com.vn/terms/
-api.info.contact.name=SOFTWARE CO., LTD
-api.info.contact.email=contact@company.com.vn
-api.info.contact.url=https://company.com.vn/
-api.info.license.name=Apache 2.0
-api.info.license.url=http://www.apache.org/licenses/LICENSE-2.0.html
 
 # ===============================
 # DATABASE
 # ===============================
-spring.datasource.url=jdbc:mysql://${MYSQL_URL:mysql}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:order-service}
+spring.datasource.url=jdbc:mysql://${MYSQL_URL:localhost:3306/order-service}
 spring.datasource.username=${MYSQL_USER:mysql}
 spring.datasource.password=${MYSQL_PASSWORD:password}
 
@@ -53,13 +52,10 @@ management.endpoint.health.show-details=always
 management.health.circuitbreakers.enabled=true
 management.health.ratelimiters.enabled=true
 
-# KAFKA producer
 # ===============================
-spring.kafka.bootstrap-servers=kafka:29092
-spring.kafka.template.default-topic=notificationTopic
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.properties.spring.json.type.mapping=event:com.service.order.event.PlacedOrderEvent
+# KAFKA PRODUCER
+# ===============================
+kafka.bootstrap.servers=${KAFKA_SERVER:localhost:29092}
 
 # ===============================
 # Resilience4J Circuit Breakers
