--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <spring-cloud.version>2021.0.4</spring-cloud.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <spring-cloud.version>2021.0.2</spring-cloud.version>
         <swagger.version>1.6.12</swagger.version>
         <bom.version>1.17.3</bom.version>
         <image.path>registry.hub.docker.com/luongquoctay87</image.path>
@@ -77,7 +77,7 @@
                 <version>2.8.0</version>
                 <configuration>
                     <from>
-                        <image>openjdk:alpine</image>
+                        <image>openjdk:11</image>
                     </from>
                     <to>
                         <image>${image.path}/${project.artifactId}:${project.version}</image>
