--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,18 +2,17 @@
 # APPLICATION SETTING
 # ===============================
 spring.application.name=product-service
-server.servlet.context-path=/api/product-service
 server.port=2632
 
 # ===============================
 # EUREKA CLIENT
 # ===============================
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@service-registry:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_USER:eureka}:${EUREKA_PASSWORD:password}@${DISCOVERY_SERVER:localhost:8761}/eureka
 
 ## ===============================
 ## ZIPKIN SERVER
 ## ===============================
-spring.zipkin.base-url=http://zipkin:9411
+spring.zipkin.base-url=${ZIPKIN_SERVER:http://localhost:9411}
 spring.sleuth.sampler.probability=1.0
 
 # ===============================
@@ -24,22 +23,22 @@ management.endpoints.web.exposure.include=prometheus
 ## ===============================
 ## OpenAPI Definition
 ## ===============================
-springdoc.api-docs.path=/api-docs
-api.info.title=Product API Services
+springdoc.api-docs.path=${API_DOCS_PATH:/api-docs}
+api.info.version=${API_INFO_VERSION:1.0}
+api.info.terms-of-service=${API_INFO_TERMS:https://software.com.vn/terms/}
+api.info.contact.name=${API_INFO_CONTACT_NAME:SOFTWARE CO., LTD}
+api.info.contact.email=${API_INFO_CONTACT_EMAIL:contact@software.com.vn}
+api.info.contact.url=${API_INFO_CONTACT_URL:https://software.com.vn/}
+api.info.license.name=${API_INFO_LICENSE_NAME:Apache 2.0}
+api.info.license.url=${API_INFO_LICENSE_URL:http://www.apache.org/licenses/LICENSE-2.0.html}
+api.info.title=Product API Service
 api.info.description=API to fetch product details for application
-api.info.version=1.0.0
-api.info.terms-of-service=https://company.com.vn/terms/
-api.info.contact.name=SOFTWARE CO., LTD
-api.info.contact.email=contact@company.com.vn
-api.info.contact.url=https://company.com.vn/
-api.info.license.name=Apache 2.0
-api.info.license.url=http://www.apache.org/licenses/LICENSE-2.0.html
 
 # ===============================
 # MONGODB
 # ===============================
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.host=${MONGO_HOST:mongodb}
+spring.data.mongodb.host=${MONGO_HOST:localhost}
 spring.data.mongodb.port=${MONGO_PORT:27017}
 spring.data.mongodb.username=${MONGO_ROOT_USERNAME:mongo}
 spring.data.mongodb.password=${MONGO_ROOT_PASSWORD:password}
