--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -7,16 +7,16 @@ server.port=8761
 # ===============================
 ## EUREKA SERVER
 ## ===============================
-eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.hostname=${EUREKA_HOST:localhost}
 eureka.username=${EUREKA_USER:eureka}
 eureka.password=${EUREKA_PASSWORD:password}
 
 # ===============================
 # ZIPKIN SERVER
 # ===============================
-spring.zipkin.base-url=http://zipkin:9411
+spring.zipkin.base-url=${ZIPKIN_SERVER:http://localhost:9411}
 spring.sleuth.sampler.probability=1.0
 
 # ===============================
